fix layout issues in View

--- a/styles2.css
+++ b/styles2.css
@@ -640,6 +640,26 @@ a.nav-cur-page:hover, button.nav-cur-page:hover {
     background-color: #fff;
 }
 
+.x-checkbox {
+    -webkit-appearance: none;
+    border-radius: .25rem;
+    border: 2px solid var(--gray);
+    height: 1.125rem;
+    width: 1.125rem;
+    padding: .125rem;
+}
+
+.x-checkbox:checked {
+    background-image: -webkit-linear-gradient(bottom left, #fff0 42%, var(--dark) 50%, #fff0 58%),
+        -webkit-linear-gradient(top left, #fff0 42%, var(--dark) 50%, #fff0 58%);
+    background-image: -moz-linear-gradient(bottom left, #fff0 42%, var(--dark) 50%, #fff0 58%),
+        -moz-linear-gradient(top left, #fff0 42%, var(--dark) 50%, #fff0 58%);
+    background-image: -o-linear-gradient(bottom left, #fff0 42%, var(--dark) 50%, #fff0 58%),
+        -o-linear-gradient(top left, #fff0 42%, var(--dark) 50%, #fff0 58%);
+    background-image: linear-gradient(to top right, #fff0 42%, var(--dark) 50%, #fff0 58%),
+        linear-gradient(to bottom right, #fff0 42%, var(--dark) 50%, #fff0 58%);
+}
+
 select:invalid {
     color: var(--secondary);
 }
